Split up PrimalMagickEventMixins; added MixinExtras

--- a/build.gradle
+++ b/build.gradle
@@ -178,7 +178,11 @@ dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
     // Apply Mixin AP
-    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+    annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
+    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:${mixinextras_version}"))
+    implementation(jarJar("io.github.llamalad7:mixinextras-forge:${mixinextras_version}")) {
+        jarJar.ranged(it, "[${mixinextras_version},)")
+    }
 
     // For automatic name deobfuscation using NeoForge SRGUtils (mappings provided by Parchment)
     implementation(jarJar(group: 'net.neoforged', name: 'srgutils', version: '[1.0, 2.0)'))
