--- a/gradle.properties
+++ b/gradle.properties
@@ -36,6 +36,11 @@ mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
 mapping_version=1.20.1-2023.09.03-1.20.1
+# The mixin version to use for the project.
+mixin_version=0.8.5
+# The mixinextras version to use for the project.
+mixinextras_version=0.5.0-beta.4
+# mixinextras_beta = 4
 
 ## Scala Properties
 # The Scala 2 library version to use for the project.
